--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "JC4114",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://jc4114.github.io/waterPipes/",
