--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "waterPipes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jc4114.github.io/waterPipes/",
+  "homepage": "https://JC4114.github.io/waterPipes/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
